# geotagz-service

./: .env  Cargo.toml  README.md
docker/: docker-compose.yml
docker/volume/cache/: machine.json
src/: lib.rs
src/app/: app.rs  mod.rs  state.rs
src/app/database/: blob_store.rs  data_store.rs  mod.rs
src/app/models/: image_data_entity.rs  image_upload_event.rs  mod.rs  user_entity.rs
src/app/queue/: message_queue.rs
src/app/routes/: create_image.rs  get_images.rs  healthcheck.rs  mod.rs
src/interfaces/: message_queue.rs  mod.rs  store.rs
