[package]
name = "geotagz-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.1"
mockall = "0.11.4"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "geotagz-service"

[[bin]]
path = "src/bin/worker.rs"
name = "geotagz-worker"
