[package]
name = "geotagz-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "1.0.3"
aws-sdk-s3 = "1.5.0"
axum = { version = "0.7.1", features = ["multipart"] }
dotenv = "0.15.0"
log = "0.4.20"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "geotagz-service"

[[bin]]
path = "src/bin/worker.rs"
name = "geotagz-worker"
